# CapitalOne_Hackathon

./: .gitignore  CHANGELOG.md  DOCUMENTATION_UPDATE_SUMMARY.md  ITERATIVE_AGENT_SUMMARY.md  ITERATIVE_AGENT_UX_UPDATE_SUMMARY.md  MIGRATION_SUMMARY.md  README.md  ROUTING_ENHANCEMENT_SUMMARY.md  TOOL_REGISTRY_FIX_SUMMARY.md
backend/: .env sample  .gitignore  Dockerfile  ITERATIVE_AGENT_README.md  ROUTING_README.md  STREAMLIT_README.md  TOOL_FIX_SUMMARY.md  agent_test.py  app.py  chat_service.py  database.py  debug_chat_service.py  debug_mongo.py  debug_routing.py  debug_streamlit_imports.py  main.py  pyproject.toml  requirements.txt  run_streamlit.py  test.py  test_agent.py  test_api_connection.py  test_chat_service_history.py  test_clean_iterative.py  test_conversation_history.py  test_crop_query.py  test_debug.py  test_full_flow.py  test_iterative_agent.py  test_langraph.py  test_minimal.py  test_multi_agent.py  test_routing.py  test_routing_service.py  test_streamlit.py  test_tool_calling.py  test_tool_function.py  test_tools_integration.py
backend/conversational-ui/: my_cl_app.py
backend/src/: __init__.py
backend/src/agents/: MULTI_AGENT_README.md  README.md  __init__.py  agent_coordinator.py  base_agent.py  financial_agent.py  general_chat_agent.py  intent_gathering_agent.py  iterative_agent.py  langraph_agent.py  organic_farming_agent.py  weather_agent.py
backend/src/config/: __init__.py  multi_agent_config.py
backend/src/infrastructure/: mongo_service.py
backend/src/llm/: gemini_llm.py  (+1 more)
backend/static/: index.html  iterative_test.html
data/: README.md  (+6 more)
(+40 files in other folders)
